--- a/p8105_hw1_xl3054.Rmd
+++ b/p8105_hw1_xl3054.Rmd
@@ -1,12 +1,14 @@
 ---
 title: "p8105_hw1_xl3054"
-author: "Xinhui Lin"
-date: "2025-09-14"
-output: html_document
+author: "Xinhui Lin (xl3054)"
+date: "2025-09-20"
+output: github_document
 ---
 
 # Problem 1
+
 ```{r}
+#load data
 library(moderndive)
 data("early_january_weather")
 early_january_weather
@@ -18,7 +20,8 @@ This dataset "`early_january_weather`" contains `r nrow(early_january_weather)` 
 library(ggplot2)
 ggplot(early_january_weather) + 
   geom_point(aes(x = time_hour, y = temp, color = humid)) + 
-  labs(title = "Temperature Over Time", x = "Time", y = "Temperature", color = "Humidity")
+  labs(title = "Temperature and Humidity Over Time", x = "Time", y = "Temperature", color = "Humidity")
+ggsave("Temperature and Humidity Over Time.pdf")
 ```
 
 This scatterplot shows temperature (`temp`) and humidity (`humid`) over time (`time_hour`) in early January. In general, temperature increases as time goes, while goes up and down within each day, ranging from `r min(early_january_weather$temp)`°F to `r max(early_january_weather$temp)`°F. Early in the month, when temperature is lower, humidity is also lower, while later in the month, warmer days tend to come along with higher humidity. Overall, the plot suggests both temperature and humidity increased over time.
@@ -26,8 +29,9 @@ This scatterplot shows temperature (`temp`) and humidity (`humid`) over time (`t
 
 # Problem 2
 ```{r}
+#create dataframe
 library(tibble)
-set.seed(123)
+set.seed(123) #for reproducibility
 problem2_df = 
   tibble(
     random_sample = rnorm(10, mean = 0, sd = 1),
@@ -38,22 +42,22 @@ problem2_df =
 problem2_df
 ```
 
-Taking the mean of each variable:
 ```{r}
-library(tidyverse)
-
+#taking mean of each var
+library(dplyr)
 mean(pull(problem2_df, random_sample))
 mean(pull(problem2_df, greater_0))
 mean(pull(problem2_df, chr_vec))
 mean(pull(problem2_df, fac_vec))
 ```
+
 Only the first `random_sample` and second `greater_0` columns are able to get a mean, `r mean(pull(problem2_df, random_sample))` and `r mean(pull(problem2_df, greater_0))` respectively. However, the other two columns shows "NA" for the output, and there are warning messages saying "argument is not numeric or logical: returning NA".
 
-
-```{r echo = TRUE, eval = FALSE}
-as.numeric(problem2_df$greater_0)  # logical to numeric (FALSE = 0, TRUE = 1)
-as.numeric(problem2_df$chr_vec)    # character to numeric but with NA and warning
-as.numeric(problem2_df$fac_vec)    # factor to integers for levels (1, 2, 3)
+```{r echo = TRUE, results='hide', message=FALSE, warning=FALSE}
+#convert logical, factor and character into numeric
+as.numeric(problem2_df$greater_0)
+as.numeric(problem2_df$chr_vec)
+as.numeric(problem2_df$fac_vec)
 ```
 After using `as.numeric` function, logical is able to change to numeric, with FALSE = 0 and TRUE = 1. This works with mean() because logicals are automatically considered as 0 and 1 for FALSE and TRUE.
 Characters cannot convert to numeric numbers because a single word/character like "char1" does not have a numeric meaning, which the mean cannot be calculated.
