--- a/p8105_hw1_xl3054.Rmd
+++ b/p8105_hw1_xl3054.Rmd
@@ -17,7 +17,7 @@ This dataset "`early_january_weather`" contains `r nrow(early_january_weather)` 
 
 ```{r}
 ## scatterplot
-library(ggplot2)
+library(tidyverse)
 ggplot(early_january_weather) + 
   geom_point(aes(x = time_hour, y = temp, color = humid)) + 
   labs(title = "Temperature and Humidity Over Time", x = "Time", y = "Temperature", color = "Humidity")
@@ -44,7 +44,6 @@ problem2_df
 
 ```{r}
 #taking mean of each var
-library(dplyr)
 mean(pull(problem2_df, random_sample))
 mean(pull(problem2_df, greater_0))
 mean(pull(problem2_df, chr_vec))
@@ -63,6 +62,6 @@ After using `as.numeric` function, logical is able to change to numeric, with FA
 Characters cannot convert to numeric numbers because a single word/character like "char1" does not have a numeric meaning, which the mean cannot be calculated.
 Factors are also able to convert into numeric as integers for corresponding levels (1, 2, 3), but in factors, the levels are not in numeric values, so the mean would not be meaningful.
 
-It shows that the mean can be only calculated when a variable has a meaning numeric value, such as an integer, a double or a logical value, but not when a variable is in factors or characters.
+It shows that the mean can be only calculated when a variable has a meaning numeric value, such as an integer, a double or a logical value, but not when a variable is in factor or character.
 
 
